@@ -118,6 +118,7 @@ class contentengine(object):
                 cm=[]
 
                 cm.append(( self.addon.getLocalizedString(30227), 'XBMC.RunPlugin('+self.PLUGIN_URL+ '?mode=delete_task&job='+str(job)+')' ))
+                cm.append(( self.addon.getLocalizedString(30232), 'XBMC.RunPlugin('+self.PLUGIN_URL+ '?mode=reset_task&job='+str(job)+')' ))
 
                 listitem.addContextMenuItems(cm, True)
 
@@ -141,6 +142,7 @@ class contentengine(object):
                 cm=[]
 
                 cm.append(( self.addon.getLocalizedString(30227), 'XBMC.RunPlugin('+self.PLUGIN_URL+ '?mode=delete_task&job='+str(job)+')' ))
+                cm.append(( self.addon.getLocalizedString(30232), 'XBMC.RunPlugin('+self.PLUGIN_URL+ '?mode=reset_task&job='+str(job)+')' ))
 
                 listitem.addContextMenuItems(cm, True)
 
@@ -740,6 +742,12 @@ class contentengine(object):
 
             if job is not None:
                 addon.setSetting(job + '_instance', '')
+
+        elif mode == 'reset_task':
+            job = settingsModule.getParameter('job',None)
+
+            if job is not None:
+                addon.setSetting(job + '_status', '0')
 
         elif mode == 'run_task':
             job = settingsModule.getParameter('job',None)
